--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     }
   },
   "require": {
-    "php": ">=5.4"
+    "php": ">=5.4",
+    "usmanhalalit/pixie": "~2.0.0"
   },
   "authors": [
     {
