--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
       "Phact\\Event\\": "src/Phact/Event",
       "Phact\\Template\\": "src/Phact/Template",
       "Phact\\Cli\\": "src/Phact/Cli",
-      "Phact\\Form\\": "src/Phact/Form"
+      "Phact\\Form\\": "src/Phact/Form",
+      "Phact\\Validators\\": "src/Phact/Validators"
     }
   },
   "require": {
