--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
       "Phact\\Module\\": "src/Phact/Module",
       "Phact\\Interfaces\\": "src/Phact/Interfaces",
       "Phact\\Pagination\\": "src/Phact/Pagination",
-      "Phact\\Commands\\": "src/Phact/Commands"
+      "Phact\\Commands\\": "src/Phact/Commands",
+      "Phact\\Components\\": "src/Phact/Components"
     },
     "files": [
       "src/dump.php"
