--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     ]
   },
   "require": {
+    "imagine/imagine": "^0.6.3",
     "php": ">=5.4",
     "phact-cmf/pixie": ">=2.0.2",
     "fenom/fenom": ">=2.11.1"
