--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,11 @@
     ]
   },
   "require": {
-    "imagine/imagine": "^0.6.3",
     "php": ">=5.4",
+    "imagine/imagine": "^0.6.3",
     "phact-cmf/pixie": ">=2.0.2",
-    "fenom/fenom": ">=2.11.1"
+    "fenom/fenom": ">=2.11.1",
+    "cocur/slugify": "^2.3"
   },
   "authors": [
     {
