--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,13 @@
     ]
   },
   "require": {
-    "php": ">=5.4",
+    "php": ">=5.6",
     "imagine/imagine": "^0.6.3",
     "fenom/fenom": ">=2.11.1",
     "cocur/slugify": "^2.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6"
   },
   "authors": [
     {
