--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
       "Phact\\Components\\": "src/Phact/Components",
       "Phact\\Storage\\": "src/Phact/Storage",
       "Phact\\Cache\\": "src/Phact/Cache",
-      "Phact\\Log\\": "src/Phact/Log"
+      "Phact\\Log\\": "src/Phact/Log",
+      "Phact\\Translate\\": "src/Phact/Translate"
     },
     "files": [
       "src/dump.php"
@@ -36,7 +37,9 @@
     "php": ">=5.6",
     "imagine/imagine": "^0.6.3",
     "fenom/fenom": ">=2.11.1",
-    "cocur/slugify": "^2.3"
+    "cocur/slugify": "^2.3",
+    "symfony/translation": "~3.4.12",
+    "symfony/config": "~4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6"
