--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,13 @@
     ]
   },
   "require": {
-    "php": ">=5.6",
+    "php": ">=7.1",
     "imagine/imagine": "^0.6.3",
     "fenom/fenom": ">=2.11.1",
     "cocur/slugify": "^2.3",
     "symfony/translation": "~3.4.12",
-    "symfony/config": "~3.0"
+    "symfony/config": "~3.0",
+    "doctrine/dbal": "~2.8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5"
