--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - postgresql
 before_install:
   - mysql -e 'CREATE DATABASE phact;'
-  - postgresql -e 'CREATE DATABASE phact;'
+  - psql -c 'CREATE DATABASE phact;' -U postgres
   - echo 'date.timezone = "Europe/Moscow"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 install:
   - travis_retry composer install --prefer-source --no-interaction
