--- a/composer.json
+++ b/composer.json
@@ -28,20 +28,23 @@
       "Phact\\Storage\\": "src/Phact/Storage",
       "Phact\\Cache\\": "src/Phact/Cache",
       "Phact\\Log\\": "src/Phact/Log",
-      "Phact\\Translate\\": "src/Phact/Translate"
+      "Phact\\Translate\\": "src/Phact/Translate",
+      "Phact\\Di\\": "src/Phact/Di"
     },
     "files": [
       "src/dump.php"
     ]
   },
   "require": {
-    "php": ">=7.1",
-    "imagine/imagine": "^0.6.3",
+    "php": "^7.1.3",
+    "imagine/imagine": "^0.7.1",
     "fenom/fenom": ">=2.11.1",
     "cocur/slugify": "^2.3",
-    "symfony/translation": "~3.4.12",
-    "symfony/config": "~3.0",
-    "doctrine/dbal": "~2.8.0"
+    "symfony/translation": "~4.1",
+    "symfony/config": "~4.1",
+    "doctrine/dbal": "~2.8.0",
+    "psr/container": "^1.0",
+    "symfony/dependency-injection": "~4.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^5"
