--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
     "symfony/translation": "~4.1",
     "symfony/config": "~4.1",
     "doctrine/dbal": "~2.8.0",
-    "psr/container": "^1.0",
-    "symfony/dependency-injection": "~4.1"
+    "psr/container": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5"
