--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,9 @@
     "symfony/config": "~4.1",
     "doctrine/dbal": "~2.8.0",
     "psr/container": "^1.0",
-    "psr/log": "^1.0.2"
+    "psr/log": "^1.0.2",
+    "psr/simple-cache": "^1.0.1",
+    "filp/whoops": "^2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^5"
