--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
     "filp/whoops": "^2.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "~9.5"
   },
   "authors": [
     {
