--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   },
   "require": {
     "php": "^7.1.3",
-    "imagine/imagine": "^1.2.3",
+    "imagine/imagine": "~1.2.3",
     "fenom/fenom": ">=2.11.1",
     "cocur/slugify": "^2.3",
     "symfony/translation": "~4.1",
