--- a/composer.json
+++ b/composer.json
@@ -36,13 +36,13 @@
     ]
   },
   "require": {
-    "php": "^7.1.3 | ^8.0",
+    "php": "^8.0",
     "imagine/imagine": "~1.2.3",
     "fenom/fenom": ">=2.11.1",
     "cocur/slugify": "^2.3",
     "symfony/translation": "~4.1",
     "symfony/config": "~4.1",
-    "doctrine/dbal": "^2",
+    "doctrine/dbal": "^3.3.7",
     "psr/container": "^1.0",
     "psr/log": "^1.0.2",
     "psr/simple-cache": "^1.0.1",
